<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundblack"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GameMatchingFragment">

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundblack"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tablenumbertextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="hello"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#e0e0e0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tablenumbertextview" />


        <ImageView
            android:id="@+id/player1image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/profile_circle_background"
            android:src="@drawable/ludogameicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />


        <ImageView
            android:id="@+id/player2image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/profile_circle_background"
            android:padding="2dp"
            android:src="@drawable/ludobg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_marginTop="16dp"
            android:src="@drawable/vs"
            app:layout_constraintEnd_toStartOf="@+id/player1image"
            app:layout_constraintStart_toEndOf="@+id/player2image"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/hostnametextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/player2image"
            app:layout_constraintStart_toStartOf="@+id/player2image"
            app:layout_constraintTop_toBottomOf="@+id/player2image" />

        <TextView
            android:id="@+id/playernametextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/player1image"
            app:layout_constraintStart_toStartOf="@+id/player1image"
            app:layout_constraintTop_toBottomOf="@+id/player1image" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="BET COINS"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/hostnametextview"
            app:layout_constraintTop_toBottomOf="@+id/hostnametextview" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/betcoinstextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:drawableLeft="@drawable/coinsimage"
            android:text="100 coins"
            android:textColor="@color/yellow"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/playernametextview"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="Room Code:"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/betcoinstextview"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#e0e0e0"
            app:layout_constraintEnd_toEndOf="@+id/betcoinstextview"
            app:layout_constraintStart_toStartOf="@id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <com.chaos.view.PinView
            android:id="@+id/roomcodeedittext"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:cursorVisible="true"
            android:hint="Hint."
            android:inputType="text"
            android:itemBackground="@drawable/pinview_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorWidth="2dp"
            app:itemCount="8"
            app:itemHeight="48dp"
            app:itemRadius="10dp"
            app:itemSpacing="10dp"

            app:itemWidth="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:lineColor="@color/white"
            app:lineWidth="2dp"
            app:viewType="rectangle" />

        <ImageView
            android:id="@+id/copytextimageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_file_copy_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/roomcodeedittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/roomcodeedittext"
            app:layout_constraintTop_toTopOf="@+id/roomcodeedittext" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitRoomCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit code"

            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/green"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/askhosttosharecode"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/roomcodeedittext"
            app:layout_constraintStart_toStartOf="@+id/roomcodeedittext"
            app:layout_constraintTop_toBottomOf="@+id/roomcodeedittext" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/rules"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitRoomCode"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="SHARE RESULTS"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="20dp"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/gameresultarray"
                app:backgroundTint="@color/white"
                app:layout_constraintCircleRadius="20dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/selectscreenshottextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Select Screenshot"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="#e0e0e0"
            app:layout_constraintEnd_toEndOf="@id/selectscreenshottextview"
            app:layout_constraintStart_toStartOf="@id/selectscreenshottextview"
            app:layout_constraintTop_toBottomOf="@+id/selectscreenshottextview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choosescreenshotbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="Choose File"
            android:textColor="@color/white"
            app:cornerRadius="60dp"
            app:layout_constraintEnd_toEndOf="@id/selectscreenshottextview"
            app:layout_constraintStart_toStartOf="@id/selectscreenshottextview"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/numoffilestextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/numOfFilesChoosenString"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choosescreenshotbutton" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/yellow"
            android:text="Submit your results"
            android:textColor="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numoffilestextview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>